--- a/view/client/includes/footer.ejs
+++ b/view/client/includes/footer.ejs
@@ -27,10 +27,12 @@
 
   <div class="main-contact">
     <h3>دسته بندی</h3>
-    <li><a href="#">میوه خشک</a></li>
-    <li><a href="#">چای میوه </a></li>
-    <li><a href="#">ادویه جات</a></li>
-    <li><a href="#">ترشی و لواشک</a></li>
+    <li><a href="/api/product/getProducts/میوه خشک">میوه خشک</a></li>
+    <li><a href="/api/product/getProducts/چای میوه ای و دمنوش"">چای میوه ای و دمنوش </a></li>
+    <li><a href="/api/product/getProducts/ادویه">ادویه</a></li>
+    <li><a href="/api/product/getProducts/لواشک و ترشی">لواشک و ترشی</a></li>
+    <li><a href="/api/product/getProducts/پک">پک کادویی</a></li>
+    <li><a href="/api/product/getProducts/میوه خشک منجمد">میوه خشک منجمد</a></li>
   </div>
 </section>
 
