--- a/view/client/index.ejs
+++ b/view/client/index.ejs
@@ -6,7 +6,7 @@
     <h1>پَم پَم <br /><span>فروشگاه اینترنتی میوه خشک</span></h1>
 
     <p>مرغوب ترین میوه خشک که با عشق برای شما ساخته شده</p>
-    <a href="#" class="btn">محصولات</a>
+    <a href="/api/product/getProducts/all" class="btn">محصولات</a>
   </div>
 </section>
 
