--- a/view/client/products.ejs
+++ b/view/client/products.ejs
@@ -45,8 +45,19 @@
   </div>
 
 
-
-
+<a href="?page=1">1</a>
+<% if(pagination.hasPrevPage && pagination.page != 1 && pagination.page != 2){ %>
+<a href="?page=<%= pagination.prevPage %>"><%= pagination.prevPage %></a>
+  <% } %>
+  <% if( pagination.page != 1 && pagination.page != pagination.totalPages){ %>
+  <a href="?page=<%= pagination.page %>"><%= pagination.page %></a>
+  <% } %>
+  <% if(pagination.hasNextPage && pagination.nextPage != pagination.totalPages){ %>
+    <a href="?page=<%= pagination.nextPage %>"><%= pagination.nextPage %></a>
+      <% } %>
+      
+      <a href="?page=<%= pagination.totalPages  %>"><%= pagination.totalPages  %></a>
+      
 <!----brand--->
 <!-- <section class="brand">
       <div class="brand-content">
