--- a/view/client/products.ejs
+++ b/view/client/products.ejs
@@ -44,20 +44,25 @@
     <% } %>
   </div>
 
-
-<a href="?page=1">1</a>
-<% if(pagination.hasPrevPage && pagination.page != 1 && pagination.page != 2){ %>
-<a href="?page=<%= pagination.prevPage %>"><%= pagination.prevPage %></a>
-  <% } %>
-  <% if( pagination.page != 1 && pagination.page != pagination.totalPages){ %>
-  <a href="?page=<%= pagination.page %>"><%= pagination.page %></a>
-  <% } %>
-  <% if(pagination.hasNextPage && pagination.nextPage != pagination.totalPages){ %>
-    <a href="?page=<%= pagination.nextPage %>"><%= pagination.nextPage %></a>
+  <section class="pagination">
+  <% if(pagination.page !== 1) { %>
+    <a href="?sort=<%= sortBy %>&page=1">1</a>
+    <% } %>
+    <% if(pagination.hasPrevPage && pagination.page !== 1 && pagination.page !== 2){ %>
+      <a href="?sort=<%= sortBy %>&page=<%= pagination.prevPage %>"><%= pagination.prevPage %></a>
       <% } %>
-      
-      <a href="?page=<%= pagination.totalPages  %>"><%= pagination.totalPages  %></a>
-      
+     
+        <a class="active" href="?sort=<%= sortBy %>&page=<%= pagination.page %>"><%= pagination.page %></a>
+        
+        <% if(pagination.hasNextPage && pagination.nextPage !== pagination.totalPages){ %>
+          <a href="?sort=<%= sortBy %>&page=<%= pagination.nextPage %>"><%= pagination.nextPage %></a>
+          <% } %>
+          <% if(pagination.totalPages !== 1 && pagination.page !== pagination.totalPages){ %>
+            <a href="?sort=<%= sortBy %>&page=<%= pagination.totalPages  %>"><%= pagination.totalPages  %></a>
+            <% } %>
+            
+          </section>
+          
 <!----brand--->
 <!-- <section class="brand">
       <div class="brand-content">
