bug fix in design and improve ux

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,7 +153,7 @@ section {
 }
 
 header.sticky {
-  background: var(--bg-color);
+  background: black;
   padding: 14px 14%;
   box-shadow: 0px 0px 10px rgb(0 0 0 / 10%);
 }
@@ -249,8 +249,9 @@ header.sticky {
 }
 
 .new-content {
+  justify-content: center;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 320px));
   gap: 1.3rem;
   align-items: center;
   margin-top: 4rem;
