--- a/view/client/includes/head.ejs
+++ b/view/client/includes/head.ejs
@@ -8,5 +8,4 @@
     <link rel="stylesheet" type="text/css" href="/css/style2.css" />
     <link rel="stylesheet" href="/css/boxicons/css/boxicons.css" />
   </head>
-</html>
-<body></body>
+<body>
