--- a/view/client/signin.ejs
+++ b/view/client/signin.ejs
@@ -21,8 +21,11 @@
 </form>
 
 
-<br>
-<p>رمز خود را فراموش کرده اید؟<a href="#">اینجا کلیک کنید!</a></p>
+<span>
+  <p>رمز خود را فراموش کرده اید؟<a href="/api/auth/forgetPassword">اینجا کلیک کنید!</a></p>
+  <p>اکانت ندارید؟<a href="/api/auth/signup">ورود به بخش ثبت نام!</a></p>
+</span>
+
 </div>
 
 </div>
