--- a/view/client/signup.ejs
+++ b/view/client/signup.ejs
@@ -5,24 +5,22 @@
 <div class="small-container">
 
 <div class="sign-input">
-<h3>ورود</h3>
+<h3>ثبت نام</h3>
 
 <div>
 
 
 
-<form action="/api/auth/signin" method="POST">
+<form action="/api/auth/signup" method="POST">
 
   <input type="text" name="email" placeholder="ایمیل خود را وارد کنید">
   <input type="text" name="password" placeholder="پسورد خود را وارد کنید">
-  
   <button type="submit" class="btn">ثبت</button>
   
 </form>
 
 
-<br>
-<p>رمز خود را فراموش کرده اید؟<a href="#">اینجا کلیک کنید!</a></p>
+<p>اکانت دارید؟<a href="/api/auth/signin">وارد شوید!</a></p>
 </div>
 
 </div>
