complete change auth concept (jwt to session)

--- a/view/client/includes/header.ejs
+++ b/view/client/includes/header.ejs
@@ -14,7 +14,7 @@
   </ul>
   <div class="header-icons">
     <a href="#"><i class="bx bx-shopping-bag"></i></a>
-    <a href="#"><i class="bx bxs-user"></i></a>
+    <a href="/api/auth/signup"><i class="bx bxs-user"></i></a>
     <div class="bx bx-menu" id="menu-icon"></div>
   </div>
 </header>
