--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -502,6 +502,7 @@ select:focus {
 }
 
 .single-product input {
+  color: black;
   width: 50px;
   height: 40px;
   padding-left: 10px;
@@ -821,4 +822,120 @@ form a {
 
 .cm-reply p:first-child {
   border-bottom: 1px solid;
+}
+
+/* dropdown */
+
+.dropdown {
+  direction: ltr;
+  position: relative;
+  display: inline-block;
+  text-align: left;
+  width: 132px;
+}
+
+.dropdown-text {
+  cursor: pointer;
+  position: absolute;
+  text-indent: 10px;
+  line-height: 32px;
+  background-color: black;
+  border: 2px solid var(--main-color);
+  border-radius: 3px;
+  width: 100%;
+}
+
+.dropdown-text:after {
+  position: absolute;
+  right: 6px;
+  top: 15px;
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 5px 4px 0 4px;
+  border-color: var(--main-color) transparent transparent transparent;
+}
+
+.dropdown-text,
+.dropdown-content a {
+  color: var(--main-color);
+  /* text-shadow: 0 1px #fff; */
+}
+
+.dropdown-toggle {
+  font-size: 0;
+  z-index: 1;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  border: none;
+  padding: 0;
+  margin: 0 0 0 1px;
+  background: transparent;
+  text-indent: -10px;
+  height: 34px;
+  width: 100%;
+}
+
+.dropdown-toggle:focus {
+  outline: 0;
+}
+
+.dropdown-content {
+  -webkit-transition: all 0.25s ease;
+  -moz-transition: all 0.25s ease;
+  -ms-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+  list-style-type: none;
+  position: absolute;
+  top: 32px;
+  padding: 0;
+  margin: 0;
+  opacity: 0;
+  visibility: hidden;
+  border-radius: 3px;
+  text-indent: 10px;
+  line-height: 32px;
+  background-color: black;
+  /* border: 1px solid var(--main-color); */
+  width: 140px;
+}
+
+.dropdown-content a {
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background: var(--main-color);
+  color: black;
+}
+
+.dropdown-toggle:hover ~ .dropdown-text,
+.dropdown-toggle:focus ~ .dropdown-text {
+  background-color: black;
+}
+
+.dropdown-toggle:focus ~ .dropdown-text {
+  /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2) inset,
+    0 1px 0 rgba(255, 255, 255, 0.8); */
+  z-index: 2;
+}
+
+.dropdown-toggle:focus ~ .dropdown-text:after {
+  border-width: 0 4px 5px 4px;
+  border-color: transparent transparent var(--main-color) transparent;
+}
+
+.dropdown-content:hover,
+.dropdown-toggle:focus ~ .dropdown-content {
+  opacity: 1;
+  visibility: visible;
+  top: 42px;
+}
+
+.header-icons {
+  display: flex;
+  gap: 1rem;
 }
